# CookingYnah

./: .gitattributes  .gitignore  LICENSE  README.md
.github/workflows/: Clean Repo.yml  build.yml
Assets/: BGMHandler.cs  Basic Enemy(Clone).prefab  Bocchi.prefab  Debugger.cs  TutorialPopup.cs  TutorialTrigger.cs  TwitchChatManager.cs  testScript.cs
Assets/Art/Enemy Animation + Art/: Basic Enemy Controller.controller  Boss Enemy Controller.controller  (+1 more)
Assets/Plugins/: libtwitch_irc.bundle
Assets/Prefabs/: Basic Enemy.prefab  Basic Rat Enemy.prefab  Drop Item 1.prefab  Drop Item.prefab  Food Item.prefab  Heavy Rat Enemy Variant.prefab  Icon.prefab  Item Slot Prefab.prefab  Item.prefab  LATESTPlayerCombo.prefab  LogEntry.prefab  MinimapCombo.prefab  Player Camera Combo.prefab  Spawn Handler.prefab  Temp Effect Handler.prefab
Assets/ProBuilder Data/: Default Material Palette.asset
Assets/Scenes/: Beginning Cutscene.unity  Dungeon 1 Level.unity  Dungeon 1 Level.unity.orig  Dungeon 2 Level.unity  Dungeon 3 Level.unity  Dungeon 3 Level.unity.orig  Dungeon Level.unity  Ending Cutscene.unity  Main Level.unity  Main Level.unity.orig  MainMenu.unity  SampleScene.unity  Tutorial.unity
Assets/Scripts/: BuffManager.cs  DamageHandler.cs  Enemy.cs  InventoryNode.cs  Item.cs  Minimap.cs  Player.cs  PlayerInventory.cs  UIManager.cs  UseItemButton.cs
Natives/libtwitch_irc/: Cargo.toml  build.rs
Natives/libtwitch_irc/src/: lib.rs  twitch.rs
ProjectSettings/: DynamicsManager.asset  EditorBuildSettings.asset  InputManager.asset  ProjectSettings.asset  TagManager.asset
(+575 files in other folders)
