[package]
name = "libtwitch_irc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "libtwitch_irc"

[dependencies]
tokio = { version = "1.29.1", features = ["rt-multi-thread"] }
twitch-irc = "5.0.0"

[build-dependencies]
csbindgen = { git = "https://github.com/KoolieAid/csbindgen" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
